apps/fumadocs/content/docs-v/1.0.0/adapters/postmark.mdx
---
title: Postmark
description: Send through the Postmark Email API with message streams, metadata, and Postmark's single-tag model.
icon: postmark
---

## Capabilities

| Repeated headers | Idempotency | Scheduling | Personalized |
| --- | --- | --- | --- |
| Yes | `none` | No | `expanded` |

These values come from the adapter's exported `capabilities` declaration. The [field support matrix](/docs/adapters/field-support) covers normalized message fields.

The Postmark adapter calls the [Postmark Email API](https://postmarkapp.com/developer/api/email-api) with plain `fetch`. Its distinctive feature is message streams: set `messageStream` once and every send routes through that Postmark stream.

<ProviderBadge adapter="postmark" />

## Configure

Create a [server token](https://postmarkapp.com/developer/api/overview#authentication) for the server you send through, and make sure the sender signature or domain is approved in Postmark.

```ts title="lib/email.ts"
import { createEmailClient } from "@opencoredev/email-sdk";
import { postmark } from "@opencoredev/email-sdk/postmark";

export const email = createEmailClient({
  adapters: [
    postmark({
      serverToken: process.env.POSTMARK_SERVER_TOKEN!,
      messageStream: "outbound",
    }),
  ],
});
```

<TypeTable
  type={{
    serverToken: {
      description: "Postmark server token.",
      type: "string",
      required: true,
    },
    messageStream: {
      description: "Postmark message stream to send through.",
      type: "string",
    },
    baseUrl: {
      description: "Override the API origin, e.g. for a proxy.",
      type: "string",
      default: '"https://api.postmarkapp.com"',
    },
    fetch: {
      description: "Custom fetch implementation for tests or special runtimes.",
      type: "typeof fetch",
    },
    headers: {
      description: "Extra HTTP headers sent with every request.",
      type: "Record<string, string>",
    },
  }}
/>

## Send

Postmark maps `cc`, `bcc`, `replyTo`, `headers`, `attachments`, `metadata`, and one tag.

```ts
const result = await email.send({
  from: "Acme <hello@acme.com>",
  to: "user@example.com",
  replyTo: "support@example.com",
  subject: "Your receipt for order ord_123",
  html: "<p>Thanks for your order.</p>",
  metadata: { orderId: "ord_123" },
  tags: [{ name: "type", value: "receipt" }],
});

console.log(result.id); // Postmark MessageID
```

`metadata` becomes Postmark `Metadata`, and `result.accepted` echoes Postmark's `To` line.

<Callout type="warn" title="One tag per message">
  Postmark has a single `Tag` field. The adapter serializes the first tag as `name:value` and a
  second tag throws an `EmailValidationError` before any request is made. Need multiple tags?
  Check the [field support matrix](/docs/adapters/field-support).
</Callout>

## Verify from the CLI

```bash
POSTMARK_SERVER_TOKEN="..." npx email-sdk doctor --adapter postmark
```

```bash
POSTMARK_SERVER_TOKEN="..." npx email-sdk send \
  --adapter postmark \
  --message-stream outbound \
  --from "Acme <hello@acme.com>" \
  --to user@example.com \
  --subject "Postmark smoke test" \
  --text "It works" \
  --dry-run
```

The token also accepts the `--server-token` flag. Drop `--dry-run` for one real send to confirm the server token, sender signature, and message stream actually work together.
